# obsidian_mcp

./: .env.example  .gitignore  Makefile  QUICKSTART.md  README.md  pyproject.toml
docs/: BATCH_OPERATIONS.md  CALENDAR.md  EXAMPLES.md
src/obsidian_mcp/: __init__.py  calendar.py  config.py  search.py  server.py  vault.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_config.py  test_search.py  test_vault.py
